[tool.poetry]
name = "play"
version = "0.1.0"
description = ""
authors = ["trumanpurnell <truman.purnell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bs4 = "^0.0.1"
requests = "^2.25.1"
websocket-client = "^0.58.0"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
